drm/rockchip: reject AFBC for planes wider than 2560

Rockchip VOP does not support decoding AFBC wider than 2560 pixels, it
results in corrupted output. See for example:
https://gitlab.freedesktop.org/mesa/mesa/-/issues/7968

Reject it so that userspace falls back to uncompressed format for the
plane.

Signed-off-by: Dan Callaghan <djc@djc.id.au>